fix: overflow isues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4626,8 +4626,8 @@ img.keys {
 
 .partners-logo {
 
-  width: fit-content;
-  margin: auto;
+  width: 100%;
+  margin: 0px;
   margin-top: 18px;
   margin-bottom: 68px;
   display: flex;
